<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/my_name"
            android:textColor="@color/black"
            android:background="@color/blue"
            android:textSize="@dimen/title_size"
            android:gravity="center"/>
        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_margin="@dimen/margin_basex2"
            android:background="@drawable/button_background"
            android:textSize="@dimen/text_medium"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/pink"
            android:text="@string/uit"
            android:textStyle="bold"
            android:layout_margin="@dimen/margin_basex2"
            android:textColor="@color/black"
            android:textSize="@dimen/title_size"
            android:gravity="center"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>